<resources>
    <string name="app_name">ITI-lab6</string>
    <string name="name">name</string>
    <string name="date">Date</string>
    <string name="post">Post</string>
    <string name="more_details">More Details</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="e_mail">E-mail</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="welcome_back">Welcome back</string>
    <string name="required">Required</string>
</resources>