<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <View
        android:id="@+id/imgView"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_90sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/welcome_back"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgView" />

    <TextView
        android:id="@+id/textToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textWelcome" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/edittext_background"
         android:drawablePadding="@dimen/_15sdp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_12sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/textToContinue"
        tools:layout_editor_absoluteX="16dp" />


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edittext_background"
         android:drawablePadding="@dimen/_15sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        tools:layout_editor_absoluteX="16dp"

        />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
         android:padding="@dimen/_5sdp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintVertical_bias="0.492" />


</androidx.constraintlayout.widget.ConstraintLayout>